--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ __pycache__/
 **/images_first_try/
 **/combined_images
 combined_images
+**/ML/Embeddings_Storage/
 
 #Nics gitignore
 **/temp_images/
